--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    w to move/accelerate
+			a and d to turn
+			SPACE to hyperspace
 	    </footer>
 	</body>
 </html>
