--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    w to move/accelerate
-			a and d to turn
+		    w to move/accelerate<br>
+			a and d to turn<br>
 			SPACE to hyperspace
 	    </footer>
 	</body>
