--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	    <footer>
 		    w to move/accelerate<br>
 			a and d to turn<br>
-			SPACE to hyperspace
+			SPACE to hyperspace<br>
+			s to shoot
 	    </footer>
 	</body>
 </html>
